@@ -90,7 +90,7 @@ export ldap_transport_maps_domain_cf="${POSTFIX_LOOKUP_DIR}/transport_maps_domai
 export ldap_virtual_mailbox_maps_cf="${POSTFIX_LOOKUP_DIR}/virtual_mailbox_maps.cf"
 export ldap_virtual_alias_maps_cf="${POSTFIX_LOOKUP_DIR}/virtual_alias_maps.cf"
 export ldap_virtual_group_maps_cf="${POSTFIX_LOOKUP_DIR}/virtual_group_maps.cf"
-export ldap_virtual_maillist_maps_cf="${POSTFIX_LOOKUP_DIR}/virtual_maillist_maps.cf"
+export ldap_virtual_group_members_maps_cf="${POSTFIX_LOOKUP_DIR}/virtual_group_members_maps.cf"
 export ldap_sender_login_maps_cf="${POSTFIX_LOOKUP_DIR}/sender_login_maps.cf"
 export ldap_recipient_bcc_maps_domain_cf="${POSTFIX_LOOKUP_DIR}/recipient_bcc_maps_domain.cf"
 export ldap_recipient_bcc_maps_user_cf="${POSTFIX_LOOKUP_DIR}/recipient_bcc_maps_user.cf"
